2008-11-03  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-04-01
	* improved LS timeout logic
	* reset of trigger report table when stopping
	* web page now shows timed out LS index
	
2008-10-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-04-00
	* reworked web pages and micropage
	* some fixes to scalers code 

2008-10-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V01-03-06
	* requires EventFilter/Utilities V00-14-16
	* add StateMachine::rcmsStateListener() to infospace

2008-09-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-03-05
	* fix scalers workloop
	
2008-08-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-03-04
	* pull mode HLT config and added squid check to monitor and web page

2008-06-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-03-03
	* added counter for recovery attempts
	* fixed bug in defaultWebPage causing crash when page is loaded while
	in recovery

2008-06-19  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-03-02
	* removed printout ( or replaced with log where necessary)
	* block watchdog when starting edm::eventProcessor to avoid races

2008-06-13  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-03-01
	* removed all soap callbacks for prescales etc
	* introduced retrieval of hlt scalers and push to runcontrol
	* added TriggerReportHelpers
	
2008-05-04  Philipp Schieferdecler  <philipp.schieferdecker@cern.ch>

	* tag V01-02-04
	* removed obsolete PrescaleService stuff

2008-03-18  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-02-03
	* removed obsolete DQM stuff

2008-03-07  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-02-02
	* fix flashlists and small fix to monitoring 

2008-02-29  Emilio Meschi  <emilio.meschi@cern.ch>

        * tag V01-02-01
	* fixed defaultWebPage crash in halted
	* Now calls explicitly beginJob in configuring
	* call clear of ModuleWebRegistry at halting if present

2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V01-02-00